--- a/roles/wordpress-role/tasks/main.yml
+++ b/roles/wordpress-role/tasks/main.yml
@@ -1,4 +1,41 @@
 
 ---
-# Здесь вы можете добавить задачи для установки и настройки Wordpress.
-    
+- name: Install necessary packages
+  yum:
+    name:
+      - httpd
+      - php
+      - php-mysql
+      - mariadb-server
+    state: present
+
+- name: Start and enable Apache
+  service:
+    name: httpd
+    state: started
+    enabled: yes
+
+- name: Start and enable MariaDB
+  service:
+    name: mariadb
+    state: started
+    enabled: yes
+
+- name: Download Wordpress
+  get_url:
+    url: https://wordpress.org/latest.tar.gz
+    dest: /tmp/wordpress.tar.gz
+    mode: '0755'
+
+- name: Unarchive Wordpress to the web directory
+  unarchive:
+    src: /tmp/wordpress.tar.gz
+    dest: /var/www/html/
+    remote_src: yes
+
+- name: Copy sample config to active config
+  copy:
+    src: /var/www/html/wordpress/wp-config-sample.php
+    dest: /var/www/html/wordpress/wp-config.php
+
+# TODO: Add database configuration to wp-config.php
